Fix donate button in header and dajnato modal z-index

--- a/packages/trnavka-theme/resources/styles/app.scss
+++ b/packages/trnavka-theme/resources/styles/app.scss
@@ -39,3 +39,7 @@ body{
         margin-right: 5px;
     }
 }
+
+#dajnato-cta-modal {
+    z-index: 10000000;
+}
